HVAC Backup 2/objects/Billing_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Due_Date__c</fullName>
        <label>Billing Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Term__c</fullName>
        <label>Billing Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>start_of _period</fullName>
                </value>
                <value>
                    <fullName>end_of_period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_line_Number__c</fullName>
        <label>Billing line Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Item_Number__c</fullName>
        <formula>Service_Contract__r.SAP_Contract_Number__c + Billing_line_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Line Item Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Billing Line Items</relationshipLabel>
        <relationshipName>Billing_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Billing Line Items</relationshipLabel>
        <relationshipName>Billing_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Billing Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BLI-{0000}</displayFormat>
        <label>Billing Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>